@@ -7,7 +7,7 @@
 STYLE=$(shell if [ -f "/usr/bin/d2c" ]; then echo "normal"; 	\
 	else echo "bootstrap";					\
 	fi)
-VERSION=2.3.9pre2
+VERSION=2.3.10pre1
 MACHINE=$(shell uname -m)
 ifeq ("$(MACHINE)", "sparc64")
 	MACHINE=sparc
@@ -90,7 +90,8 @@ ifeq ("$(STYLE)", "normal")
 		./configure --with-readline \
 			--prefix=/usr \
 			--with-site-dylan-prefix=/usr \
-			--with-gnu-ld
+			--with-gnu-ld \
+			--enable-debug=yes
 		libtoolize --force
 endif
 	
